<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NexVision IPTV</string>
    <string name="label_enter_details">Enter your server and room/screen number</string>
    <string name="hint_server_url">Server URL (e.g. http://192.168.1.100)</string>
    <string name="hint_room_number">Room / Screen number (e.g. 101)</string>
    <string name="hint_search_channels">Search channels…</string>
    <string name="btn_connect">Connect</string>
    <string name="menu_settings">Change Room</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_logout">Disconnect</string>
</resources>
